# lle

./: .gitignore  CLAUDE.md  Cargo.toml  build.rs  licence  lift.toml  main.py  map.toml  optimizations.md  personal  plan-cooperation-3.md  plan-cooperation.md  plan.md  prompt.md  pyproject.toml  readme.md  stubcheck.sh  test.py
.github/workflows/: CI.yml  build.yaml  ci.yaml  docs.yml  release.yml  test.yaml  test.yml  test_and_release.yaml
docs/: .gitignore  readme_build.md  readme_pypi.md  solver-optimizations.md
docs/tutorials/: Introduction.ipynb  lle_env_introduction.ipynb  world_introduction.ipynb
docs/tutorials/boards/: board  empty  gems  linear  linear2  tatl  two_agents  walls
examples/: basic.py  cooperation_characterization.py  custom_generator.py  generate_and_solve.py  mutual_cooperation.py  world_characterization.py
maps/: lvl1  lvl2  lvl3  lvl4  lvl5  lvl6
python/: allowlist.txt  bench.py  main.py  test.py  truc.py
python/examples/: create.py  generate_and_solve.py
python/lle/: __init__.py  action.pyi  agent.pyi  direction.pyi  env.py  event.pyi  exceptions.pyi  lle.py  lle.pyi  observations.py  tile.pyi  tiles.pyi  types.py  world.pyi  world_builder.pyi
python/lle/agent/: __init__.pyi
python/lle/characterization/: __init__.py  characterize.py  trajectory_characterization.py  world_characterization.py  world_properties.py
python/lle/cooperation/: __init__.py  analyser.py  characterization.py  graph.py  profile.py
python/lle/env/: __init__.py  builder.py  core.py  env.py  extras_generators.py  lle_pool.py  multi_objective.py  reward_strategy.py  single_objective.py  utils.py
python/lle/envs/: __init__.py  adversarial_env.py  cooperative.py  reward_strategy.py
python/lle/exceptions/: __init__.pyi
python/lle/generator/: __init__.py  _args.py  _base.py  _candidates.py  _constructive.py  _geometry.py  _level6_style.py  _random.py  _shapes.py  _world_builder.py  builder.py  candidates.py  constructive.py  custom.py  generator.py  geometry.py  level6_style.py  placements.py  random.py  world_filter.py
python/lle/rust_observations/: __init__.pyi
python/lle/solver/: __init__.py  __init__.pyi  _profile_analyzer.py  _world_solver.py  cooperation_level.py  incremental_solver.py  laser_mode.py  profile_analyzer.py  solver.py  types.py  variable_factory.py  world_solver.py
python/lle/tiles/: __init__.pyi
python/lle/world/: __init__.pyi
python/tests/: test_actions.py  test_constraint_context.py  test_constraints.py  test_cooperation_analyser.py  test_cooperation_characterization.py  test_cooperation_constraints.py  test_cooperation_level.py  test_core.py  test_custom_generator.py  test_death_strategy.py  test_direction.py  test_docblocks.py  test_env.py  test_generate_constraints.py  test_generate_t_min.py  test_generator.py  test_geometry_ok.py  test_imports.py  test_lasers.py  test_level_generator.py  test_mutual_cooperation.py  test_observations.py  test_other.py  test_pickle.py  test_planning.py  test_reward_strategy.py  test_save_load.py  test_serialization.py  test_solvability.py  test_solver.py  test_temporal_dependency_graph.py  test_tiles.py  test_walkable_lasers.py  test_world.py  test_world_builder.py  test_world_characterization.py
python/tests/maps/: 3x3.txt  3x3_0agent  3x3_alternating  3x3_two_agents.txt  3x4.txt  3x4_gem.txt  3x4_two_agents.txt  3x4_two_agents_gem.txt  5x5_laser_1agent  5x5_laser_1agent_1gem  5x5_laser_2agents  5x5_laser_2agents _1gem  5x5_laser_2agents_bis  5x5_laser_blocked_by_laser_source  5x5_laser_no_wall  5x5_laser_over_void  5x5void_two_agents.txt  7x7_available_actions.txt  basic.txt  facing_lasers  laser_on_spawn  one_laser  wrong.txt
python/tests/old/: old_test_planning.py  old_test_solvability.py
resources/: lle_toml_schema.json
resources/levels/: lvl6  lvl7
resources/sprites/: convert.py
resources/sprites_transparent copy/: convert.py
src/: action.rs  agent.rs  errors.rs  grid.rs  levels.rs  lib.rs  logger.rs  main.rs  observations.rs  position.rs  reward_collector.rs  stub_gen.rs  truc.rs  utils.rs  world.rs
src/bindings/: mod.rs  pyaction.rs  pyagent.rs  pydirection.rs  pyevent.rs  pyexceptions.rs  pyposition.rs  pytile.rs  pyworld.rs  pyworld_builder.rs  pyworld_state.rs  utils.rs
src/bindings/observations/: layered.rs  mod.rs  partial.rs  state.rs
src/bindings/pytile/: mod.rs  pygem.rs  pylaser.rs  pylaser_source.rs
src/bindings/solver/: mod.rs  pyclause_generator.rs  pyconstraint_generator.rs  pysolvemode.rs
src/bindings/tiles/: mod.rs  pydirection.rs  pygem.rs  pylaser.rs  (+1 more)
src/core/: errors.rs  event.rs  levels.rs  mod.rs  world.rs  world_state.rs
src/levels/: lvl1  lvl2  lvl3  lvl4  lvl5  mod.rs
src/parsing/: errors.rs  mod.rs  parser.rs
src/planning/: mod.rs  problem_state.rs  search_problem.rs
src/rendering/: mod.rs  renderer.rs  sprites.rs  tile_visitor.rs
src/reward/: mod.rs  reward_event.rs  team_reward.rs
src/solver/: clauses.rs  context.rs  errors.rs  mod.rs  position_set.rs  var_pool.rs
src/tiles/: direction.rs  gem.rs  laser.rs  laser_source.rs  mod.rs  start_exit.rs  tile.rs  tile_type.rs
src/unit_tests/: clause_generation_tests.rs  test_context.rs  test_cooperation_clauses.rs  test_core.rs  test_done_strategy.rs  test_individual_clauses.rs  test_renderer.rs  test_tile.rs  test_world.rs
src/utils/: mod.rs  observer.rs  test.rs
src/world/: end_game_strategy.rs  mod.rs  world.rs  world_model.rs
tests/: clause_generation_tests.rs  constraint_generation_tests.rs  position_set_tests.rs  renderer_integration_tests.rs  toml_schema_tests.rs  world_integration_tests.rs  world_tests.rs
(+78 files in other folders)
