[package]
name = "lle"
version = "2.7.0"
edition = "2024"
description = "Cooperative MARL environment based on laser-blocking."
readme = "readme.md"
homepage = "https://github.com/yamoling/lle"
repository = "https://github.com/yamoling/lle"
license-file = "licence"
keywords = ["environment", "laser", "lle", "marl", "rl"]
categories = ["science"]

exclude = ["docs", "pyproject.toml", "python/*", "stubcheck.sh", "uv.lock"]

[lib]
crate-type = ["cdylib", "rlib"]
name = "lle"
path = "src/lib.rs"

[[bin]]
name = "stub-gen"
path = "src/stub_gen.rs"

[dependencies]
image = "0.25.5"
itertools = "0.14.0"
lazy_static = "1.5.0"
numpy = "0.28.0"
pyo3 = { version = "0.28.0", features = ["generate-import-lib"] }
pyo3-stub-gen = "0.20.0"
rand = "0.10.0"
serde = "1.0.217"
toml = "1.1.0"

[dev-dependencies]
jsonschema = "0.45"
serde_json = "1.0"
