[project]
name = "laser-learning-environment"
description = "Laser Learning Environment (LLE) for Multi-Agent Reinforcement Learning"
readme = "readme.md"
requires-python = ">=3.10,<4"
classifiers = [
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Programming Language :: Rust",
]
dependencies = [
  "multi-agent-rlenv>=4.0.1",
  "numpy>=2.0.0",
  "opencv-python>=4.0.0",
]
dynamic = ["version"]

[[project.authors]]
name = "Yannick Molinghen"
email = "yannick.molinghen@ulb.be"

[dependency-groups]
dev = [
  "maturin>=1.7.0",
  "orjson>=3.11.7",
  "pdoc>=16.0.0",
  "pip>=24.2",
  "pytest>=9.0.0",
]

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "lle"
python-source = "python"

[tool.ruff]
line-length = 140
