[project]
name = "laser-learning-environment"
description = "Laser Learning Environment (LLE) for Multi-Agent Reinforcement Learning"
readme = "readme.md"
requires-python = ">=3.10,<4"
classifiers = [
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Programming Language :: Rust",
]
dependencies = [
  "multi-agent-rlenv>=4.3.0",
  "numpy>=2.0.0",
  "python-sat>=1.8",
  "tqdm>=4.67.3"
]
dynamic = ["version"]

[[project.authors]]
name = "Yannick Molinghen"
email = "yannick.molinghen@ulb.be"

[dependency-groups]
dev = [
  "basedpyright>=1.39.3",
  "maturin>=1.7.0",
  "opencv-python>=4.13.0.92",
  "orjson>=3.11.7",
  "pdoc>=16.0.0",
  "pip>=24.2",
  "pyinstrument>=5.1.2",
  "pytest>=9.0.0",
]

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.basedpyright]
typeCheckingMode = "standard"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "lle"
python-source = "python"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests that invoke the SAT solver or full generation loops",
]

[tool.ruff]
line-length = 140
